# text-only-duplex-model

./: .gitignore  CLAUDE.md  README.md  SURVEY.md  asr_compare.py  check_rms.py  coherence_reward_server.py  configuration_minicpm.py  consent_irb25458.html  contraints-torch.txt  demo.py  duplex_client.py  duplex_protocol.py  example_prompt.txt  full-duplex.jinja2  full-duplex2.jinja2  full_duplex.py  full_duplex2.py  full_duplex_trainer.py  inference_FDB.py  log.txt  logs.txt  main.py  pyproject.toml  remote_duplex.py  replay_client.py  repro_replay.py  requirements.txt  run_demo.py  run_demo_ui.html  server.py  simple_web.py  survey_demo.py  survey_to_csv.py  test_miniPCM.py  test_vad.py  trainer.py  vad_server.py
data/survey/: consent_irb24222.html  debrief_irb24222.html  instructions.html
retico/: .gitignore  README.md  duplex_client.py  duplex_protocol.py  inperson.py  pyproject.toml  test.py
retico/retico_hush/: hush.py
retico/retico_minicpm/: remote_duplex.py
retico/retico_mistyrobot/: misty_speaker.py
scripts/: warm_asr_cache.py
tests/: test_asr_monotonic.py  test_coherence.py  test_coherence_behavior.py  test_demo.py  test_full_duplex.py  test_full_duplex2.py  test_integration_full_duplex2.py  test_integration_real.py  test_protocol.py  test_rewards.py  test_server.py  test_vad.py  test_vad_backends.py
trainer/: __init__.py  data_ingestion.py  rewards.py  rl_trainer.py  sft_trainer.py  training_scripts.json  training_scripts_boosted.json  training_utils.py
